Fixing distorted images in footer and adding email to link

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -15,6 +15,17 @@
   z-index: 0;
 }
 
+.watermarkCover {
+  width: 120px;
+  height: 40px;
+  position: relative;
+}
+
+.watermark {
+  width: 100%;
+  height: 100%;
+}
+
 .linearGradient {
   background-color: #262626;
   width: 100%;
@@ -30,20 +41,25 @@
   align-items:flex-start;
   height: 80%;
   align-items: flex-start;
-  gap:10vw;
+  gap: 10vw;
   z-index: 1;
 }
 
+.relabLogo {
+  margin-left: 100px;
+  /* left: 100px; */
+}
 
-.relabIcon {
+
+/* .RelabLogoBox {
   display: flex;
   width: 150px;
-  background-color: transparent;
   height: 150px;
+  background-color: transparent;
   padding-left: 5vw;
 
   border: none;
-}
+} */
 
 .footer :global(button):hover {
   background-color: transparent;
@@ -92,7 +108,7 @@
   display: flex;
   flex-direction: column;
   /* font-size: 1vw; */
-  gap:0.5vw;
+  gap: 0.5vw;
   justify-content: center;
   align-items: center;
   color: rgba(255, 255, 255, 0.534);
@@ -103,8 +119,8 @@
 .membershipIcons {
   display:flex;
   align-self: flex-start;
-  gap:2vw;
-  padding-left: 2vw;
+  gap: 2vw;
+  /* padding-left: 2vw; */
   align-items: center;
 }
 
@@ -125,22 +141,23 @@
     /* font-size: larger; */
   }
 
-  .relabIcon {
-    width: 17vw;
+  /* .RelabLogoBox {
+    width:  0px;
     height: 12vh;
     display: flex;
     padding: 0;
+  } */
+
+  .relabLogo {
+    margin-left: 0px;
+    /* width: 120px;
+    height: 120px; */
   }
 
-  .logoImg {
-    width: 17vw;
-    height: 120px;
-  }
-
-  .insideImg {
+  /* .insideImg {
     width: 40px;
     height: 40px;
-  }
+  } */
 
   .contactSocials {
     padding: 0;
@@ -161,67 +178,74 @@
     justify-content: space-around;
   }
 
-  .watermark1 {
+  /* .watermark1 {
     width: 120px;
     height: 40px;
-  }
+  } */
 
-  .watermark2 {
+  /* .watermark2 {
     width: 120px;
     height: 40px;
-  }
+  } */
   
-  .watermark3 {
+  /* .watermark3 {
     width: 120px;
     height: 40px;
-  }
+  } */
 
-  .socialIcons {
+  /* .socialIcons {
     width: 85%;
-  }
+  } */
 }
 
 
 @media (max-width: 650px) {
-  .watermark1 {
-    width: 80px;
+
+  .watermarkCover {
+    width: 90px;
     height: 30px;
+    position: relative;
   }
 
-  .watermark2 {
+  /* .watermark1 {
     width: 80px;
     height: 30px;
-  }
+  } */
 
-  .watermark3 {
+  /* .watermark2 {
     width: 80px;
     height: 30px;
-  }
+  } */
 
-  .membershipIcons {
+  /* .watermark3 {
+    width: 80px;
+    height: 40px;
+  } */
+
+  /* .membershipIcons {
     width: 100%;
-  }
+  } */
   
-  .footerText {
-    /* font-size: 3vw; */
-  }
+  /* .footerText {
+    font-size: 3vw;
+  } */
 
-  .relabIcon {
+  /* .RelabLogoBox {
     padding-left: +5vw;
-  }
+  } */
 
-  .topPart {
+  /* .topPart {
     padding-top: 1vh;
-  }
+  } */
 
-  .relabIcon {
+  /* .RelabLogoBox {
     width: 120px;
     height: 120px;
-  }
+  } */
 
-  .logoImg {
-    width: 95px;
-    height: 95px;
+  .relabLogo {
+    width: 100px;
+    height: 100px;
   }
 
   .contactSocials {
@@ -238,15 +262,15 @@
   }
 
   .socialIcons {
-    width: 20vw;
+    /* width: 20vw; */
     justify-content: center;
-    gap:+5vw;
+    gap: +5vw;
   }
 
-  .insideImg {
+  /* .insideImg {
     width: 25px;
     height: 25px;
-  }
+  } */
 }
 
 @media (max-width: 500px) {
@@ -254,23 +278,23 @@
     padding-left: 5vw;
   }
 
-  .jesuitasIcon {
+  /* .jesuitasIcon {
     width: 100px;
     height: 40px;
-  }
+  } */
 
-  .watermark1 {
+  /* .watermark1 {
     width: 80px;
     height: 30px;
-  }
+  } */
 
-  .watermark2 {
+  /* .watermark2 {
     width: 100px;
     height: 40px;
-  }
+  } */
   
-  .watermark3 {
+  /* .watermark3 {
     width: 110px;
     height: 40px;
-  }
+  } */
 }
